--- a/unit_5/style.css
+++ b/unit_5/style.css
@@ -28,10 +28,12 @@ p {
 }
 
 nav {
+	border: 1px black solid;
 	font-family: "Avenir Next";
 	text-align: center;
 	list-style-type: none;
 	padding: 20px;
+	background-color: #E8C66A;
 }
 
 li {
@@ -60,4 +62,15 @@ img {
 	max-width: 100%;
 	height: auto;
 	display: block;
+}
+
+header {
+	border: 1px black solid;
+	background-color: #FFED74;
+}
+
+#about {
+	border: 1px black solid;
+	background-color: #E89C6C;
+	padding: 20px;
 }
