--- a/unit_6/style.css
+++ b/unit_6/style.css
@@ -1,43 +1,65 @@
 @import url(https://fonts.googleapis.com/css?family=Lobster);
 @import url(https://fonts.googleapis.com/css?family=Slabo+13px);
 * { margin:0; padding:0; box-sizing:border-box; }
+
 body {
 	color: white;
 	text-align: center;
 	line-height:1.5;
+	text-rendering: optimizeLegibility;
 }
 
 #sectionone {
-	background-image: url('images/gabeincanyon.JPG');
+	background-image: url('images/gabeoncar.JPG');
 	background-size: cover;
 	background-attachment: fixed;
 	height: 100vh;
 }
 
-#about {
-	background-image: url('images/rocks.JPG');
-	background-size: cover;
-	background-position: absolute;
-	background-repeat: no-repeat;
-	font-family: "Avenir Next";
-	float: left;
-	text-align:left;
-}
-#about div {
-	background: rgba(7, 35, 1, 0.5);
-	height: 100vh;
+#twocolumn {
 }
 
 #slogan {
+	padding-top: 20px;
+	padding-left: 20px;
 	font-family: "Avenir Next";
 	color: white;
-	font-size: 50px;
+	font-size: 150px;
 	vertical-align: center;
+	float: left;
+	width: 60%;
 }
-p {
+
+#brandstatement {
+	line-height: 2em;
+	padding-top: 45px;
+	padding-left: 40px;
+	float: right;
+	width: 40%;
 	font-size: 20px;
+	text-align: left;
+}
+
+#about {
+	background-image: url('images/Ben_3825.JPG');
+	background-size: cover;
+	font-family: "Avenir Next";
+	height: 100vh;
+}
+
+#aboutps1 {
+	display: block;
+	opacity: 0.9;
+	background-color: rgba(0,0,0,0.4);
+}
+
+#about div {
+	float: left;
+}
+
+p {
+	font-size: 20px 180px;;
 	text-align: center;
-	/* background: rgba(0,0,0,0.4); */
 	font-family: "Avenir Next";
 	color: white;
 	padding: 20px;
@@ -58,17 +80,18 @@ nav a {
 	border: 3px solid white;
 	padding: 10px 24px;
 	margin: 1em 10%;
-}
-
-a {
+	border-radius: 1000px;
 	text-decoration: none;
 }
 
-a:hover {
-	background: rgba(0,0,0,0.4);
-
+nav a:hover {
+	background: rgba(0,0,0,0.5);
+	transition: all .2s ease-in;
+	transform: scale(1.1, 1.1);
+	color: white;
+	text-decoration: none;
 }
 
-a:visited {
+nav a:visited {
 	color: white;
 }
