--- a/unit_6/style.css
+++ b/unit_6/style.css
@@ -37,6 +37,19 @@ body {
 	text-align: left;
 }
 
+#aboutme {
+	float: right;
+	width: 40%;
+	background: black;
+	overflow: hidden;
+}
+
+#aboutpicture {
+	float: left
+	width: 60%%;
+	overflow: hidden;
+}
+
 #about {
 	background-image: url('images/BEN_3825.JPG');
 	background-size: cover;
@@ -66,7 +79,7 @@ nav {
 	clear: both;
 	font-family: "Avenir Next";
 	text-align: left;
-	padding-left: 140px;
+	padding-left: 160px;
 	list-style-type: none;
 	padding-top: 40px;
 }
