--- a/unit_6/style.css
+++ b/unit_6/style.css
@@ -49,10 +49,10 @@ body {
 }
 
 #firstcontent {
-	background-image: url("images/queenstown.jpg");
+	background-image: url("images/melb1.jpg");
+	background-size: cover;
 	color: black;
 	float: left;
-	height: 100%;
 	width: 50%;
 }
 
