--- a/unit_8/style.css
+++ b/unit_8/style.css
@@ -1,10 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Lobster);
 @import url(https://fonts.googleapis.com/css?family=Slabo+13px);
-* { font-family: "Avenir Next"; margin:0; padding:0; box-sizing:border-box; transition: all .2s ease-in;}
+* { margin:0; padding:0; box-sizing:border-box; transition: all .2s ease-in;}
 
 body {
 	text-align: center;
-	line-height:1.5;
+	font-family: "Avenir Next";
 	text-rendering: optimizeLegibility;
 }
 
@@ -20,165 +20,34 @@ body {
 
 #slogan {
 	padding-top: 2%;
-	padding-left: 1%;
 	color: white;
 	font-size: 110px;
-	vertical-align: center;
 	float: left;
-	width: 60%;
+	width: 50%;
 }
 
 #brandstatement {
-	line-height: 2em;
 	padding-top: 2%;
 	padding-left: 3%;
-	float: right;
-	width: 40%;
+	line-height: 2em;
 	text-align: left;
 	font-size: 20px;
-}
-
-#headaboutme {
-	padding-top: 60px;
-	padding-bottom: 60px;
-}
-
-#headaboutme img {
-	position: absolute;
-}
-
-#aboutme {
-	width: 100%;
-	background: white;
-	overflow: hidden;
-	height: 400px;
-}
-
-#aboutme p {
-	color: black;
-}
-
-#firstcontent {
-	opacity: 0.6;
-	background-size: cover;
-	padding-bottom: 133px;
-	color: black;
-	float: left;
-	width: 50%;
-}
-
-#firstcontent p {
-	color: black;
-}
-
-#firstpicture {
-	float: left;
-	width: 50%;
-	overflow: hidden;
-}
-
-#firstpicture img {
-	min-width: 600px;
-	width: 100%;
-	-webkit-filter: grayscale(100%);
-}
-
-#meagain {
-	width: 100%;
-	height: 400px;
-	background: white;
-	overflow: hidden;
-}
-
-#meagain p {
-	color: black;
-}
-
-#contentme {
-	opacity: 0.6;
-	padding-bottom: 400px;
-	float: left;
-	width: 50%;
-}
-
-#contentme p {
-	color: black;
-}
-
-#mepicture {
-	float: right;
-	width: 50%;
-	color: black;
-	overflow: hidden;
-	background-size: cover;
-	height: 100%;
-}
-
-#mepicture img {
-	max-width: 720px;
-	min-width: 600px;
-	width: 100%;
-	-webkit-filter: grayscale(100%);
-}
-
-#headskills {
-	padding-top: 60px;
-	padding-bottom: 60px;
-}
-
-#skills {
-	width: 100%;
-	height: 400px;
-	background: white;
-	overflow: hidden;
-}
-
-#skillspicture {
-	float: left;
-	width: 50%;
-	overflow: hidden;
-}
-
-#skillspicture img {
-	min-width: 600px;
-	width: 100%;
-}
-
-#myskills {
-	min-width: 600px;
-	overflow: hidden;
 	float: right;
 	width: 50%;
 }
 
-#myskills p {
-	color: black;
-}
-
-.clearfix {
-
-}
-
-p {
-	font-size: 20px;
-	text-align: center;
-	color: white;
-	padding: 3%;
-}
-
-nav {
-	padding-top: 15%;
-	text-align: left;
-	padding-left: %;
-	list-style-type: none;
+.clearfix:after {
+	height: 0;
+	visibility: hidden;
+	display: block;
+	clear:both;
 }
 
 nav a {
 	text-align: center;
 	font-size: 20px;
 	color: white;
-	display: inline-block;
-	border: 3px solid white;
+	border: 2px solid white;
 	padding: 1% 2.3%;
 	margin: 1em;
 	border-radius: 100px;
@@ -192,20 +61,157 @@ nav a:hover {
 	text-decoration: none;
 }
 
-@media only screen and (max-width: 1116px) {
-	#slogan {
-		font-size: 80px;
-	}
+#headaboutme {
+	padding-top: 60px;
+	padding-bottom: 60px;
 }
 
-@media only screen and (max-width: 900px) {
-	#mepicture {
-		float: none;
-		margin: auto;
+#aboutme {
+	width: 100%;
+	background: white;
+	overflow: hidden;
+}
+
+#aboutme p {
+	color: black;
+}
+
+#firstcontent {
+	position: relative;
+	opacity: 0.6;
+	background-size: cover;
+	padding-bottom: 133px;
+	color: black;
+	float: left;
+	width: 50%;
+	height: 100%;
+}
+
+#firstcontent p {
+	color: black;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+#firstpicture {
+	float: left;
+	width: 50%;
+	overflow: hidden;
+	background-size: cover;
+	height: 100%;
+	-webkit-filter: grayscale(100%);
+}
+
+#meagain {
+	width: 100%;
+	background: white;
+	overflow: hidden;
+}
+
+#meagain p {
+	color: black;
+}
+
+#contentme {
+    position: relative;
+    float: left;
+    width: 50%;
+    height: 100%;
+}
+
+#contentme p {
+	color: black;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+#mepicture {
+	float: right;
+	width: 50%;
+	overflow: hidden;
+	background-size: cover;
+	height: 100%;
+	-webkit-filter: grayscale(100%);
+}
+
+#headskills {
+	padding-top: 60px;
+	padding-bottom: 60px;
+}
+
+#skills {
+	width: 100%;
+	overflow: hidden;
+}
+
+#skillspicture {
+	float: left;
+	width: 50%;
+	overflow: hidden;
+	background-size: cover;
+	height: 100%;
+}
+
+#myskills {
+	min-width: 600px;
+	overflow: hidden;
+	float: right;
+	width: 50%;
+}
+
+#myskills p {
+	color: black;
+}
+
+#moreskills { 
+	width: 100%;
+	height: 400px;
+	overflow: hidden;
+}
+
+#evenmore {
+	min-width: 600px;
+	float: left;
+	overflow: hidden;
+	width: 50%;
+}
+
+#evenmore p {
+	color: black;
+}
+
+#moreskillspicture {
+	float: right;
+	width: 50%;
+	overflow: hidden;
+}
+
+#moreskillspicture img {
+	min-width: 600px;
+	width: 100%;
+}
+
+.clearfix {
+
+}
+
+p {
+	font-size: 20px;
+	text-align: center;
+	color: white;
+	padding: 3%;
+}
+
+@media only screen and (max-width: 1398ox) {
+	#slogan {
+		
 	}
 
-	#aboutpicture {
+	#brandstatement {
 		float: none;
-		margin: auto;
 	}
 }
