--- a/unit_8/style.css
+++ b/unit_8/style.css
@@ -290,6 +290,11 @@ p {
 		float: none;
 		width: 100%;
 	}
+
+	#contactpicture, #contactcontent {
+		float: none;
+		width: 100%;
+	}
 }
 
 @media only screen and (max-width: 1036px) {
