--- a/unit_8/style.css
+++ b/unit_8/style.css
@@ -6,8 +6,13 @@ body {
 	text-align: center;
 	font-family: "Avenir Next";
 	text-rendering: optimizeLegibility;
+	font-size: 20px;
+	color: #222;
 }
-
+/*section:nth-of-type(odd) {
+	background:#222;
+	color:#fff;
+}*/
 #sectionone {
 	background-image: url('images/gabeoncar.JPG');
 	-webkit-filter: grayscale(100%);
@@ -18,224 +23,129 @@ body {
 	height: 100vh;
 	position: relative;
 }
-
+#twocolumn {
+	max-width:60em;
+	margin:auto;
+	padding-top: 3em;
+	color: #fff;
+}
+#twocolumn p {
+	position:initial;
+	transform: translate(0, 0);
+}
 #slogan {
-	padding-top: 2%;
-	color: white;
-	font-size: 110px;
+	font-size: 6vw;
+	float: left;
+	/* padding: 2rem 0; */
+	width: 50%;
+	text-align: left;
+}
+
+#brandstatement {
+	/* padding: 4rem 0; */
+	line-height: 2em;
+	text-align: left;
+	font-size: 20px;
 	float: left;
 	width: 50%;
 }
 
-#brandstatement {
-	padding-top: 2%;
-	padding-left: 3%;
-	line-height: 2em;
-	text-align: left;
-	font-size: 20px;
-	float: right;
-	width: 50%;
-}
-
-.clearfix:after {
+.clearfix:after,section:after {
 	height: 0;
 	visibility: hidden;
 	display: block;
 	clear:both;
+	content: "";
 }
 
 nav {
 	clear: both;
-	position: absolute;
-	top: 30%;
-	left: -25%;
-	width: 100%;
+	float: left;
+	margin-top: 2em;
 }
 
 nav a {
 	text-align: center;
-	font-size: 20px;
-	color: white;
-	border: 2px solid white;
-	padding: 1% 2.3%;
-	margin: 1em;
+	color: inherit;
+	border: 2px solid;
+	padding: 1em 2em;
+	display: inline-block;
 	border-radius: 100px;
 	text-decoration: none;
 }
+nav a + a {
+	margin-left: 2em;
+}
+/* nav a:first-of-type {
+	margin-left:0;
+} */
 
 nav a:hover {
 	background: rgba(0,0,0,0.5);
 	transform: scale(1.1, 1.1);
-	color: white;
 	text-decoration: none;
 }
 
-#headaboutme {
+h1 {
 	padding-top: 4%;
 	padding-bottom: 4%;
+	background: #222;
+	color: #fff;
 }
-
-#aboutme {
+section>div {
 	width: 100%;
 	overflow: hidden;
+	height: 30em;
 }
-
-#aboutme p {
-	color: black;
-}
-
-#firstcontent {
+section div div {
 	position: relative;
-	background-size: cover;
-	padding-bottom: 133px;
-	color: black;
-	float: right;
-	width: 50%;
-}
-
-#firstcontent p {
-	color: black;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	height: 100%;
-	transform: translate(-50%, -50%);
-}
-
-#firstimage {
 	float: left;
 	width: 50%;
-	overflow: hidden;
-	background-size: cover;
 	height: 100%;
 }
-
-#meagain {
-	width: 100%;
-	background: white;
-	overflow: hidden;
-}
-
-#meagain p {
-	color: black;
-}
-
-#contentme {
-    position: relative;
-    float: left;
-    width: 50%;
-}
-
-#contentme p {
-	color: black;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	height: 100%;
-	transform: translate(-50%);
-}
-
-#mepicture {
-	float: right;
-	width: 50%;
-	overflow: hidden;
-	background-size: cover;
-	height: 100%;
-}
-
-#headskills {
-	padding-top: 4%;
-	padding-bottom: 4%;
-}
-
-#skills {
-	width: 100%;
-	overflow: hidden;
-}
-
-#skillspicture {
-	float: left;
-	width: 50%;
-	overflow: hidden;
-	background-size: cover;
-	height: 100%;
-}
-
-#myskills {
-	min-width: 600px;
-	overflow: hidden;
-	float: right;
-	width: 50%;
-}
-
-#myskills p {
-	color: black;
-}
-
-#moreskills { 
-	width: 100%;
-	overflow: hidden;
-}
-
-#evenmore {
-	min-width: 600px;
-	float: left;
-	overflow: hidden;
-	width: 50%;
-}
-
-#evenmore p {
-	color: black;
-	height: 100%;
-}
-
-#moreskillspicture {
-	float: right;
-	width: 50%;
-	overflow: hidden;
-	height: 100%;
-	min-width: 600px;
-}
-
-#headcontact {
-	padding-top: 4%;
-	padding-bottom: 4%;
-}
-
-#contact {
-
-}
-
-#contactpicture {
-	float: left;
-	width: 50%;
-	overflow: hidden;
-	height: 100%;
-}
-
-#contactcontent {
-	position: relative;
-	float: right;
-	width: 50%;
-	overflow: hidden;
-	height: 100%;
-}
-
-#contactcontent p {
+section p {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	color: black;
-} 
-
+}
+section div:nth-of-type(even) div {
+    float: right;
+}
+.about-pic {
+	background: url(images/rice.jpg);
+	background-size:cover;
+	background-repeat:no-repeat;
+	background-position: center;
+}
+.meagain-pic {
+	background:url(images/gabewithcomputer.jpg);
+	background-size:cover;
+	background-repeat:no-repeat;
+	background-position: center;
+}
+.skills-pic {
+	background:url(images/streetart.jpg);
+	background-size:cover;
+	background-repeat:no-repeat;
+	background-position:center;
+}
+.moreskills-pic {
+	background:url(images/watching.jpg);
+	background-size:cover;
+	background-repeat:no-repeat;
+	background-position:center;
+}
+.contact-pic {
+	background:url(images/face.jpg);
+	background-size:cover;
+	background-repeat:no-repeat;
+	background-position: center top;
+}
 p {
-	font-size: 20px;
 	text-align: center;
-	color: white;
-	padding: 3%;
 }
-
+/*
 @media only screen and (max-width: 1398px) {
 	#sectionone {
 		position: relative;
@@ -303,5 +213,15 @@ p {
 	}
 }
 
-
-
+*/
+/*@media only screen and (max-width:1000px) {
+	section>div {
+		overflow: auto;
+		height: auto;
+	}
+	section div div {
+		width: 100%;
+		height:30em;
+	}
+}
+*/
