--- a/unit_8/style.css
+++ b/unit_8/style.css
@@ -15,7 +15,6 @@ body {
 }*/
 #sectionone {
 	background-image: url('images/gabeoncar.JPG');
-	-webkit-filter: grayscale(100%);
 	background-size: cover;
 	background-position: center;
 	width: 100%;
@@ -39,6 +38,7 @@ body {
 	/* padding: 2rem 0; */
 	width: 50%;
 	text-align: left;
+	padding-left: .2em;
 }
 #brandstatement {
 	/* padding: 4rem 0; */
@@ -70,7 +70,7 @@ nav a {
 	text-decoration: none;
 }
 nav a + a {
-	margin-left: 2em;
+	margin-left: 1em;
 }
 /* nav a:first-of-type {
 	margin-left:0;
@@ -151,17 +151,23 @@ p {
 		font-size: 5em;
 		width: 60%;
 		position: absolute;
+		padding-left: .5vw;
 	}
 	#brandstatement {
 		position: absolute;
 		top: 25%;
+		padding-left: .5vw;
 	}
 	#sectionone {
 		position: relative;
 	}
+	#twocolumn {
+		padding-top: 2em;
+	}
 	nav {
+		padding-left: .5vw;
 		position: absolute;
-		top: 70%;
+		top: 85%;
 		left: -25%
 		width: 100%;
 		float: none;
@@ -169,7 +175,7 @@ p {
 		display: block;
 	}
 }
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 933px) {
 	section>div {
 		overflow: auto;
 		height: auto;
@@ -178,8 +184,6 @@ p {
 		width: 100%;
 		height:30em;
 	}
-}
-@media only screen and (max-width: 932px) {
 	#slogan {
 		font-size: 7vw;
 	}
@@ -189,16 +193,22 @@ p {
 		font-size: 2em;
 		left: 1em;
 	}
+	#twocolumn {
+		padding-top: .5em;
+	}
 	#brandstatement {
 		left: 1em;
 		width: 90%;
 	}
 	nav {
-		top: 55%;
+		top: 45%;
 		width: 100%;
 		display: block;
-		clear: both;
+	}
+	nav a {
+		width:65%;
+	}
+	nav a + a {
+		margin-left: 0;
 	}
 }
-
-
