--- a/unit_8/style.css
+++ b/unit_8/style.css
@@ -55,8 +55,11 @@ body {
 	clear:both;
 	content: "";
 }
-#headskills a, #headcontact a{
+#headskills a, #headcontact a {
 	text-decoration: none;
+}
+#headskills a:hover, #headcontact a:hover {
+	border-bottom: 1px solid black;
 }
 #headskills a:visited, #headcontact a:visited {
 	background: blue;
@@ -217,5 +220,10 @@ p {
 	}
 	nav a + a {
 		margin-left: 0;
+	}
+}
+@media only screen and (max-width: 376px) {
+	#slogan {
+		font-size: 1em;
 	}
 }
