--- a/unit_10/style.css
+++ b/unit_10/style.css
@@ -5,7 +5,7 @@
 
 body {
 	text-align: center;
-	font-family: "Univers", sans-serif;
+	font-family: "Muli", sans-serif;
 	text-rendering: optimizeLegibility;
 	font-size: 20px;
 	color: #222;
@@ -43,6 +43,7 @@ body {
 }
 #brandstatement {
 	/* padding: 4rem 0; */
+	padding-left: 2em;
 	line-height: 2em;
 	text-align: left;
 	font-size: 20px;
@@ -66,6 +67,17 @@ body {
 }
 #headskills a:visited, #headcontact a:visited {
 	color: black;
+}
+#java-lang-logo {
+	height: 6em;
+	margin-right: .5em;
+}
+#python-lang-logo {
+	height: 6em;
+	margin-right: .5em;
+}
+#js-lang-logo {
+	height: 6em;
 }
 nav {
 	clear: both;
@@ -153,10 +165,10 @@ p {
 	text-align: center;
 }
 @media only screen and (max-width: 1200px) {
-	#sectionone {
+	/*#sectionone {
 		position: relative;
 		height: 100%;
-	}
+	}*/
 	#slogan, #brandstatement {
 		float: none;
 	}
@@ -170,9 +182,6 @@ p {
 		position: absolute;
 		top: 25%;
 		padding-left: .5vw;
-	}
-	#sectionone {
-		position: relative;
 	}
 	#twocolumn {
 		padding: 2em 1em 10em;
